--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0",
     "tailwindcss": "^2.2.15",
