--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
+    "purgecss-webpack-plugin": "^4.0.3",
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0",
     "tailwindcss": "^2.2.15",
