--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Eduardo Tejada Frost",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
