feat(package.json): cambia el archivo de configuración de referencia para compilar en modo 'development'

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.dev.js",
+    "dev": "webpack --mode development --config webpack.config.js",
     "build": "webpack --mode production --config webpack.config.js",
     "start": "webpack-dev-server --open --mode development"
   },
