--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
     "webpack": "^5.53.0",
     "webpack-dev-middleware": "^5.1.0",
