--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "Eduardo Tejada Frost",
   "license": "ISC",
   "dependencies": {
+    "@babel/register": "^7.15.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "history": "^5.0.1",
+    "ignore-styles": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
+    "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
     "webpack": "^5.53.0",
@@ -35,6 +40,7 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
+    "nodemon": "^2.0.12",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "sass": "^1.39.2",
