--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^5.3.0",
     "webpack": "^5.53.0",
     "webpack-dev-middleware": "^5.1.0",
-    "webpack-hot-middleware": "^2.25.1"
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-manifest-plugin": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -46,6 +47,7 @@
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0",
     "tailwindcss": "^2.2.15",
+    "terser-webpack-plugin": "^5.2.4",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.0"
   }
