--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autoprefixer": "^10.3.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^9.0.0",
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
